--- a/style.css
+++ b/style.css
@@ -219,6 +219,36 @@ nav .fa-bars{
     }
 }
 
+/*Sucursales */
+
+.container.sucursales {
+    background-color: #fff;
+    color: #35373a;
+    min-height: 100vh;
+    border-radius: 20px;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+}
+.sucursales-container h1 {
+    text-align: center;
+    margin-top: 70px;
+    font-family: 'Droid Sans', sans-serif;
+    font-weight: bold;
+}
+.tz-sucursales {
+    padding: 40px;
+}
+
+.tz-sucursales  img {
+    width: 100%;
+    margin-bottom: 30px;
+    transition: 0.2s ease-in-out;
+    box-shadow: 0 2px 3px rgba(0,0,0,0.2);
+}
+.tz-sucursales img {
+    border-radius: 4px;
+}
+
+
 /* suscribe */
 .get_in_touch{
     max-width: 800px;
@@ -342,3 +372,23 @@ nav .fa-bars{
 
 }
 
+
+/*whatsapp*/
+
+.whatsapp {
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:#25d366;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:30px;
+    z-index:100;
+  }
+  
+  .whatsapp-icon {
+    margin-top:13px;
+  }
